made responsive and added custom cursor

--- a/src/assets/scss/pages/home/_project.scss
+++ b/src/assets/scss/pages/home/_project.scss
@@ -7,6 +7,10 @@
 .image-wrapper {
   min-height: 214px;
 
+  @include min-break-point(tablet) {
+    min-height: 287px;
+  }
+
   @include min-break-point(large-desktop) {
     min-height: 384px;
   }
